[package]
name = "kvd"
version = "0.1.0"
edition = "2024"
authors = ["Lucas McClean <lucas@mcclean.dev>"]
description = "CLI tool for config diffing using kvd-delta library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasmcclean/kvd"
homepage = "https://github.com/lucasmcclean/kvd"
keywords = ["config", "diff", "cli", "tool"]
categories = ["command-line-utilities"]

[dependencies]
kvd-delta = { path = "../kvd-delta" }
